<resources>
    <string name="app_name">IDCT DO SURVEY</string>
   <string name="splash_title">IDCT: Mobile Field Tool</string>
    <string name="splash_version_info">Version 1.2.1</string>
    <string name="splash_author_info">University of Nottingham, GEM Foundation, and Corporación OSSO</string>
    <string name="menu_title">Global Earthquake Model\nInventory Data Capture Tool\n</string>
    <string name="btn_edit_points_off">Edit Points</string>
    <string name="btn_edit_points_on">Stop Editing</string>
    <string name="btn_locate_me">Locate Me</string>
    <string name="btn_start_survey">Start Survey</string>
    <string name="btn_start_survey_with_favourite">Favorite</string>
    <string name="btn_select_vector_layer">KML Layers</string>
    <string name="btn_select_layer">Base Layers</string>
    <string name="text_view_gpsInfo">Best Ubication:</string>
    <string name="intentPageSix">Occu</string>
    <string name="intentPageOne">Material</string>
 <string name="intentPageTwo">LLRS</string>
 <string name="intentPageThree">Roof</string>
 <string name="intentPageFour">Floor</string>
 <string name="intentPageFive">Irreg</string>
 <string name="intentPageSeven">AgeHght</string>
    <string name="intentPageEight">Comm</string>
 <string name="intentPageNine">Struc</string>
 <string name="intentPageTen">Height</string>
 <string name="intentPageEleven">Exp</string>
 <string name="intentPageTwelve">Conseq</string>
 <string name="titleConsequencesComments">Comments</string>
 <string name="titleConsequencesDamageGrade">Damage Grade</string>
 <string name="titleConsequencesFatalities">Number of Fatalities</string>
 <string name="titleConsequencesInjured">Number of Injured</string>
 <string name="titleConsequencesMissing">Number Missing</string>
 <string name="titleAgeYear">Age (YYYY)</string>
 <string name="titleAgeHeightYear">Year of Construction/Retrofit (yyyy)</string>
 <string name="titleAgeHeightAboveGroundStoreys">No. of Storeys Above Ground (storeys)</string>
 <string name="titleAgeHeightBelowGroundStoreys">No. of storeys below ground</string>
 <string name="titleAgeHeightAboveGrade">Ground Floor Height Above Grade (cm)</string>
 <string name="titleDetailsComments">Comments</string>
 <string name="titleDetailsSlope">Slope</string>
 <string name="titleDetailsBuildingPosition">Position Within Block</string>
 <string name="titleDetailsBuildingShape">Plan Shape</string>
 <string name="titleDetailsNonStructuralExteriorWalls">Material Of Exterior Walls</string>
 <string name="titleDetailsDirectionX">Direction X</string>
 <string name="titleDetailsDirectionY">Direction Y</string>
 <string name="hintDetailsDirectionY">Direct Y</string>
 <string name="hintDetailsDirectionX">Direct X</string>
 <string name="hintDetailsSlope">slope (degs)</string>
    <string name="hintDetailsComments">Enter general building comments</string>
    <string name="btnDetailsSave">Save this observation</string>
 <string name="btnDetailsCancel">Cancel this observation</string>
 <string name="hintAgeHeightDate1">from date</string>
 <string name="hintAgeHeightDate2">until date</string>
    <string name="hintAgeHeightStoreys1">storeys 1</string>
 <string name="hintAgeHeightDate">date</string>
 <string name="hintAgeHeightStoreys2">storeys 2</string>
 <string name="hintAgeHeightStoreys">storeys</string>
    <string name="hintAgeHeightHeight1">height 1</string>
 <string name="hintAgeHeightHeight2">height 2</string>
    <string name="titleSecondTabsActivityLongitudinal">Longitudinal</string>
 <string name="titleSecondTabsActivityTransverse">Transverse</string>
 <string name="titleExposureOccupantsDay">Number of Day Occupants</string>
    <string name="titleExposureOccupantsNight">Number of Night Occupants</string>
 <string name="titleExposureOccupantsTransit">Number of Transit Occupants</string>
 <string name="titleExposureDwellings">Number of Dwellings</string>
 <string name="titleExposurePlanArea">Plan Area (square metres)</string>
    <string name="titleExposureReplacementCost">Replacement Cost (per square metre)</string>
 <string name="titleExposureComments">Comments</string>
 <string name="titleFloorFoundation">Foundation System</string>
 <string name="titleFloorMaterial">Floor System Material</string>
 <string name="titleFloorType">Floor System Type</string>
 <string name="titleFloorConnection">Floor Connection</string>
 <string name="db_name">gem.db3</string>
    <string name="titleIrregularityStructural">Structural Irregularity</string>
 <string name="titleIrregularityPlan">Plan Irregularity</string>
 <string name="titleIrregularityPlanPrimary">Primary</string>
 <string name="titleIrregularityPlanSecondary">Secondary</string>
 <string name="titleIrregularityVertical">Vertical Irregularity</string>
 <string name="titleIrregularityVerticalPrimary">Primary</string>
 <string name="titleIrregularityVerticalSecondary">Secondary</string>
 <string name="titleLLRS_LongitudinalTransverseQualifier">LLRS Qualifier</string>
 <string name="titleLLRS_LongitudinalLateral">Lateral Load Resisting System</string>
 <string name="titleLLRS_LongitudinalDuctility">Ductility</string>
 <string name="titleLLRS_LongitudinalTransverseLong">Longitudinal</string>
 <string name="titleLLRS_LongitudinalTransverseDuctility">Ductility</string>
 <string name="titleLLRS_TransverseLateral">Lateral Load Resisting System</string>
 <string name="titleLLRS_TransverseDuctility">Ductility</string>
    <string name="titleMaterialType">Material Type</string>
 <string name="titleMaterialTech">Material Tech</string>
 <string name="titleMaterialMortarType">Mortar Type</string>
 <string name="titleMaterialSteelConnection">Steel Connection</string>
 <string name="titleMaterialMasonryReinforcement">Masonry Reinforcement</string>
    <string name="titleMaterialMortarStoneType">Mortar / Stone Type</string>
    <string name="titleOccupancy">Occupancy</string>
 <string name="titleOccupancyDetail">Occupancy Detail</string>
 <string name="titleProjectSettings">Create New Project Details</string>
 <string name="hintProjectSettingsSurveyorName">Surveyor Name</string>
    <string name="hintProjectSettingsProjectName">Project Name</string>
 <string name="hintProjectSettingsProjectSummary">Project Summary</string>
    <string name="btn_project_settings_save">Save these project details</string>
 <string name="titleProjectSettingsDetails">Select Project Details</string>
    <string name="titleLLRS_LongitudinalTransverseTrans">Transverse</string>
 <string name="titleRoofSystemType">Roof System Type</string>
 <string name="titleRoofShape">Roof Shape</string>
 <string name="titleRoofSystemMaterial">Roof System Material</string>
 <string name="titleRoofCoverMaterial">Roof Cover Material</string>
 <string name="titleRoofConnection">Roof Connection</string>
    <string name="titleStructureAge">Age (YYYY)</string>
 <string name="titleStructureStoreys">Height (storeys)</string>
 <string name="hintStructureAge1">date 1</string>
 <string name="hintStructureAge2">date 2</string>
 <string name="hintAgeDate1">date 1</string>
 <string name="hintAgeDate2">date 2</string>
 <string name="titleHeightStoreysAbove">Height Above Ground (storeys)</string>
 <string name="titleHeightStoreysBelow">Height Below Ground (storeys)</string>
 <string name="titleHeightAboveGrade">Height Above Grade (centimetres)</string>
 <string name="hintHeightStoreys1">storeys 1</string>
 <string name="hintHeightStoreys2">storeys 2</string>
 <string name="hintHeightH1">height 1</string>
 <string name="hintHeightH2">height 2</string>
 <string name="glossary">glossary_cleaned</string>
 <string name="titleMainTabActivityMenuTakePicture">Take Picture</string>
 <string name="titleMainTabActivityMenuViewLinkedPictures">View linked pictures</string>
 <string name="titleMainTabActivityMenuSaveFavourite">Save changes and favourite</string>
 <string name="titleMainTabActivityMenuDelete">Delete record</string>
 <string name="titleMainTabActivityMenuHelp">Help</string>
 <string name="titleMainTabActivityMenuSaveClose">Save changes and close</string>
 <string name="titleMainTabActivityDeleteThisRecord">Delete this record</string>
 <string name="titleMainTabActivityDeleteThisRecordConfirmation">Are you sure you want to delete this record?\n\nIf this record has been defined as a favourite template record it won\'t be available to create new records in future.</string>
 <string name="titleMainTabActivityMenuViewLinkedPicturesNote">Linked images. Note: the list will only show images once the survey point is saved.</string>
 <string name="btn_yes">Yes</string>
 <string name="btn_no">No</string>
 <string name="btn_cancel">Cancel</string>
    <string name="titleMainTabActivityAddFavourite">Name this favourite</string>
 <string name="titleMainTabActivityAddFavouriteName">Enter a name for this favourite</string>
 <string name="titleMainTabActivityDeleteThisRecordFail">Can\'t delete this as it\'s not saved!</string>
 <string name="titleMapViewGPSEnabled">GPS is Enabled in your device</string>
 <string name="titleMapViewWaitingLocation">Waiting for location</string>
 <string name="titleMapViewFavouriteSelection">Select a Favourite</string>
 <string name="titleMapViewSelectLayer">Select Base Map</string>
 <string name="titleMapViewSelectVectorLayer">Select Vector Layer To Show</string>
    <string name="titleMapViewSelectVectorLayerRemove">Removing KML</string>
 <string name="titlePhotoComment">Photo Comment</string>
 <string name="titlePhotoCommentLegend">Add a comment to this photo</string>
 <string name="titleCameraCancelled">Camera cancelled</string>
 <string name="titleUnsavedSurveyObservation">Unsaved Survey Observation</string>
 <string name="titleUnsavedSurveyObservationConfirmation">Do you want to save this observation?</string>
 <string name="titleMapViewGPSDisabled">GPS is disabled in your device. Would you like to enable it?</string>
 <string name="titleMapViewGPSDisabledGotoSettings">Goto Settings Page To Enable GPS</string>
 <string name="titleMapViewMenuRefreshMap">Refresh Map</string>
 <string name="titleMapViewMenuSettings">Settings</string>
 <string name="titleMapViewMenuDBtoSD">Export DB Snapshot to SDCard</string>
 <string name="titleMapViewMenuCSVtoSD">Export CSV to SDCard</string>
 <string name="titleMapViewMenuProjectSetUp">Project / Survey Set Up</string>
 <string name="titleMapViewMenuClearDB">Clear Database</string>
 <string name="titleMapViewMenuDBtoSDMessage">Exporting Database to SDCard</string>
 <string name="titleMapViewMenuCSVtoSDMessage">Exporting Survey Data to CSV SDCard</string>
 <string name="titleMapViewMenuClearDBMessageHead">Clear database</string>
    <string name="titleMapViewMenuClearDBMessageP1">This will clear the database of all survey data</string>
 <string name="titleMapViewMenuClearDBMessageP2">\n\nProject details, favourites, building survey information, exposure, consequences and photograph links will be deleted.</string>
 <string name="titleMapViewMenuClearDBMessageP3">\n\nOffline map tiles, photographs, database exports will be kept.</string>
 <string name="titleMapViewMenuClearDBMessageP4">\n\nIf you want to proceed enter the word \'delete\' in the text box and hit yes</string>
 <string name="titleMapViewMenuClearDBConfirmation">delete</string>
 <string name="titleMapViewMenuClearDBConfirmationWrong">Entered wrong check value. Database not cleared.</string>
    <string name="titleMapViewLaunchCamera">Launching camera</string>
 <string name="titleMapViewSelectingLayer">selecting layer</string>
 <string name="titleMapViewBestLocation">Best Location:\n</string>
 <string name="titleSettingsPositionDetails">Show positioning details</string>
 <string name="titleSettingsMap">Map Settings</string>
 <string name="titleSettingsProject">Project Details</string>
 <string name="titleSettingsProjectID">Project / Survey ID</string>
 <string name="titleSettingsProjectIDsummary">Unique Project ID for this survey.</string>
</resources>