<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <PreferenceCategory
        android:summary="Map Display Settings"
        android:title="@string/titleSettingsMap" >
           
        <CheckBoxPreference
            android:enabled="true"
            android:key="showPositionDetailsCheckBox"
            android:summary="On/Off"
            android:defaultValue="false"
            android:title="@string/titleSettingsPositionDetails" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="Enter Project Metadata"
        android:title="@string/titleSettingsProject" >
        <EditTextPreference
            android:name="EditText"
            android:key="projectIdTextPref"
            android:summary="@string/titleSettingsProjectIDsummary"
            android:title="@string/titleSettingsProjectID" />

    </PreferenceCategory>
</PreferenceScreen>