<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/highlight_colour"
    android:gravity="left"
        android:paddingLeft="5dp"
    android:paddingRight="5dp" 
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        style="@style/AttributeTitleStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titleRoofShape"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerRoofShape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    
        <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/highlight_colour"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/AttributeTitleStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titleRoofSystemMaterial"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listExample"
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:choiceMode="singleChoice"
            android:fadeScrollbars="false" >
        </ListView>
    </RelativeLayout>
    
        
            <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel1"
        android:background="@color/highlight_colour"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            style="@style/AttributeTitleStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titleRoofSystemType"
            android:textStyle="bold" />

        
        <ListView
            android:id="@+id/listExample2"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:choiceMode="singleChoice"
            android:fadeScrollbars="false" >
        </ListView>
    </RelativeLayout>
    
    <TextView
        android:id="@+id/textView4"
        style="@style/AttributeTitleStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titleRoofCoverMaterial"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerRoofCoverMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




    <TextView
        android:id="@+id/textView5"
        style="@style/AttributeTitleStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titleRoofConnection"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerRoofConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>